# DevMate

./: .env.example  .gitignore  README.md  checklist.md  docker-compose.yml  pyproject.toml  requirements.md
.chroma_db/: chroma.sqlite3
docker/: Dockerfile  docker-compose.yml
docs/: frontend_guidelines.md  internal_fastapi_guidelines.md  project_template.md
src/devmate/: main.py
src/devmate/agent/: core.py  factory.py  prompts.py  reader.py  static_plan_execute.py  writer.py
src/devmate/core/: config.py
src/devmate/mcp/: client.py  server.py
src/devmate/rag/: loader.py  retriever.py  splitter.py  store.py  tool.py
tests/: test_agent_full.py  test_agent_mcp.py  test_agent_v4_validation.py  test_mcp_search.py  test_rag_search.py  verify_langsmith.py
